--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100;200;300;400;500;600&family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
+
 * {
   box-sizing: border-box;
-  font-family: Epilogue, sans-serif;
+  font-family: Poppins, sans-serif;
   margin: 0;
   padding: 0;
 }
+
 
 body {
   background-color: rgb(246, 246, 246);
@@ -15,7 +18,7 @@ body {
   display: flex;
   align-items: center;
   width: 100%;
-  height: 60px;
+  height: 100px;
 }
 
 .container-title {
@@ -96,14 +99,15 @@ body {
   flex-direction: column;
   height: auto;
   margin: 5px;
-  width: 200px;
+  width: 250px;
   border: 2px solid rgb(234, 234, 233);
-  border-radius: 5px;
+  border-radius: 15px;
   box-sizing: border-box;
 }
 
-.item .item__id {
-  display: none;
+.item_id {
+  color: rgb(234, 234, 233);
+  opacity: 0;
 }
 
 .item .item__title {
@@ -122,9 +126,11 @@ body {
   background-color: rgb(5, 52, 219);
   border: 0;
   cursor: pointer;
-  margin: 0;
-  padding: 10px;
+  margin: 10px;
+  padding: 15px;
   color: white;
+  border-radius: 15px;
+  margin-bottom: 10px;
 }
 
 .cart {
@@ -140,10 +146,24 @@ body {
   overflow-y: scroll;
 }
 
+.item_preco {
+  color: red;
+  font-weight: bold;
+  font-size: large;
+  font-family: Poppins;
+}
+
 .empty-cart {
   width: 170px;
   height: 35px;
   margin: 0 auto;
   border: 2px solid rgb(5, 52, 219);
   background-color: rgb(249, 249, 246);
+}
+
+.total-price {
+  font-size: 1.5em;
+  font-weight: bold;
+  color: rgb(10, 118, 79);
+
 }
